CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_ADR__c/validationRules/req_HowVerified_if_Verified_Written.validationRule-meta.xml
<ValidationRule>
    <fullName>req_HowVerified_if_Verified_Written</fullName>
    <active>true</active>
    <description>Require How Verified Field if Verified field is &quot;Written Verification&quot;</description>
    <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c,!IDN_CASE__r.Is_CBMS_Data__c, TEXT(CDE_TYPE_VERIF__c) = &apos;V&apos; , ISBLANK(TEXT(CDE_SOURCE_VRFD_ADR__c) ) )</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFD_ADR__c</errorDisplayField>
    <errorMessage>&quot;How Verified&quot; is required if Verified is &quot;Written Verification&quot;.</errorMessage>
</ValidationRule>