CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_ADR__c/validationRules/Require_Adr_City_if_AdrType_HOME.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Adr_City_if_AdrType_HOME</fullName>
    <active>true</active>
    <description>CHAT-1158: Require Address City if Address Type is Mailing.</description>
    <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c,!IDN_CASE__r.Is_CBMS_Data__c, NOT(ISBLANK(TEXT( CDE_TYPE_ADR__c ))),
     ISPICKVAL( CDE_TYPE_ADR__c, &quot;MAL&quot;),
     ISBLANK( ADR_CITY__c ) 
)</errorConditionFormula>
    <errorDisplayField>ADR_CITY__c</errorDisplayField>
    <errorMessage>Require Address City if Address Type is Mailing.</errorMessage>
</ValidationRule>