CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_ADR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDN_CASE__c</columns>
    <columns>ADR_LINE_1__c</columns>
    <columns>CDE_TYPE_ADR__c</columns>
    <columns>CDE_TYPE_VERIF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>